Feat: add image townsquare to homepage

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         preventing people from leaving the town. You are in the town square.
         Where do you want to go? Use the buttons above.
       </div>
+      <div id="img">
+        <img src="./img/town-square.png" alt="town square image" />
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
