Style: add title of the game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="game">
+      <h1 class="title">Dragon Repeller</h1>
       <div id="stats">
         <span class="stat"
           >XP: <strong><span id="xpText">0</span></strong></span
